debugging project gallery issue on mobile

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -469,6 +469,7 @@
   height: 100%;
   text-align: center;
   transition: background-color .4s ease-in-out;
+	display: none
 }
 
 .image-enlarge_tooltip_content {
@@ -492,9 +493,9 @@
   }
 }
 
-.project-gallery-item:hover {
+/*.project-gallery-item:hover {
   .image-enlarge_tooltip_content {
     opacity: 1;
     top: 50%;
   }
-}
+}*/
